--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <img
                 src="src/logo.png"
                 alt="ERZProvide Logo"
-                onclick="location.href='/'"
+                onclick="location.href='#landing'"
             />
             <ul class="nav-links">
                 <li><a href="#about">Über uns</a></li>
@@ -25,7 +25,65 @@
                 Kontakt
             </button>
         </nav>
-        <section class="landing"></section>
-        <section class="about"></section>
+        <section class="landing" id="landing">
+            <!-- IDEA: Bild nach Jahreszeit anpassen -->
+            <h1>Dienstleistung gefällig?</h1>
+            <h2>ERZProvide-Hausservice!</h2>
+            <button class="contact-href" onclick="location.href='#contact'">
+                Kontaktiere uns!
+            </button>
+            <div class="socials">
+                <!-- INFO: font awesome svgs erstmal -->
+                <a href="#"
+                    ><img
+                        src="/src/instagram-brands-solid-full.svg"
+                        alt="Instagram Logo"
+                /></a>
+                <a href="#"
+                    ><img
+                        src="/src/whatsapp-brands-solid-full.svg"
+                        alt="Whatsapp Logo"
+                /></a>
+                <a href="#"
+                    ><img
+                        src="/src/facebook-brands-solid-full.svg"
+                        alt="Facebook Logo"
+                /></a>
+            </div>
+        </section>
+        <section class="about" id="about">
+            <div class="person">
+                <div class="infos">
+                    <h2>Lorem ipsum dolor</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit. Deleniti, perferendis nesciunt? Soluta quibusdam
+                        in dignissimos quasi voluptates delectus ducimus sed
+                        modi molestias veritatis, placeat natus deleniti quam
+                        distinctio? Aliquam, eos. Praesentium nobis aliquid
+                        commodi repellendus facilis tempore aperiam? Voluptatem
+                        aperiam vero, maiores provident perspiciatis obcaecati
+                        commodi veniam dolor eum architecto nulla eligendi?
+                    </p>
+                </div>
+                <img src="https://placehold.co/200" alt="" />
+            </div>
+            <div class="person">
+                <div class="infos">
+                    <h2>Lorem ipsum dolor</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit. Deleniti, perferendis nesciunt? Soluta quibusdam
+                        in dignissimos quasi voluptates delectus ducimus sed
+                        modi molestias veritatis, placeat natus deleniti quam
+                        distinctio? Aliquam, eos. Praesentium nobis aliquid
+                        commodi repellendus facilis tempore aperiam? Voluptatem
+                        aperiam vero, maiores provident perspiciatis obcaecati
+                        commodi veniam dolor eum architecto nulla eligendi?
+                    </p>
+                </div>
+                <img src="https://placehold.co/200" alt="" />
+            </div>
+        </section>
     </body>
 </html>
