pics and texts missing

--- a/index.html
+++ b/index.html
@@ -345,7 +345,8 @@
                 <div class="footer-bottom">
                     <p>
                         © <span id="year"></span> ERZProvide — Alle Rechte
-                        vorbehalten. &nbsp;
+                        vorbehalten. Website erstellt von
+                        <a href="https://www.emil-dev.me">Emil Repmann</a>.
                         <a href="/impressum/impressum.html">Impressum</a> •
                         <a href="/impressum/impressum.html/">Datenschutz</a>
                     </p>
