--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
                 <div class="imges">
                     <div class="wrapper">
                         <img
-                            src="https://placehold.co/400x250?text=Before"
+                            src="/src/garten_vorher.jpeg"
                             alt="Before"
                             class="before"
                         />
                         <div class="after">
                             <img
-                                src="https://placehold.co/400x250?text=After"
+                                src="/src/garten_nachher.jpeg"
                                 alt="After"
                             />
                         </div>
@@ -110,13 +110,13 @@
                 <div class="imges">
                     <div class="wrapper">
                         <img
-                            src="https://placehold.co/400x250?text=Before"
+                            src="/src/before_strauch.jpeg"
                             alt="Before"
                             class="before"
                         />
                         <div class="after">
                             <img
-                                src="https://placehold.co/400x250?text=After"
+                                src="/src/after_strauch.jpeg"
                                 alt="After"
                             />
                         </div>
@@ -134,13 +134,13 @@
                 <div class="imges">
                     <div class="wrapper">
                         <img
-                            src="https://placehold.co/400x250?text=Before"
+                            src="https://placehold.co/400x250?text=Kein+Bild+vorhanden"
                             alt="Before"
                             class="before"
                         />
                         <div class="after">
                             <img
-                                src="https://placehold.co/400x250?text=After"
+                                src="https://placehold.co/400x250?text=Kein+Bild+vorhanden"
                                 alt="After"
                             />
                         </div>
@@ -170,35 +170,21 @@
         <section class="about" id="about">
             <div class="person">
                 <div class="infos">
-                    <h2>Lorem ipsum dolor</h2>
+                    <h2>Geschäftsführer und Macher im GaLaBau</h2>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing
-                        elit. Deleniti, perferendis nesciunt? Soluta quibusdam
-                        in dignissimos quasi voluptates delectus ducimus sed
-                        modi molestias veritatis, placeat natus deleniti quam
-                        distinctio? Aliquam, eos. Praesentium nobis aliquid
-                        commodi repellendus facilis tempore aperiam? Voluptatem
-                        aperiam vero, maiores provident perspiciatis obcaecati
-                        commodi veniam dolor eum architecto nulla eligendi?
+                        Als Geschäftsführer kümmert sich Luis Huss um die praktische Umsetzung aller Projekte im Unternehmen. Mit Engagement, Leidenschaft und einem Blick fürs Detail sorgt er dafür, dass auf Ideen hochwertige und nachhaltige Außenanlagen und Wohnflächen entstehen.
                     </p>
                 </div>
-                <img src="https://placehold.co/200" alt="" />
+                <img src="https://placehold.co/200" alt="" style="display: none;"/>
             </div>
             <div class="person">
                 <div class="infos">
-                    <h2>Lorem ipsum dolor</h2>
+                    <h2>Leiter Finanzen und Controlling</h2>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing
-                        elit. Deleniti, perferendis nesciunt? Soluta quibusdam
-                        in dignissimos quasi voluptates delectus ducimus sed
-                        modi molestias veritatis, placeat natus deleniti quam
-                        distinctio? Aliquam, eos. Praesentium nobis aliquid
-                        commodi repellendus facilis tempore aperiam? Voluptatem
-                        aperiam vero, maiores provident perspiciatis obcaecati
-                        commodi veniam dolor eum architecto nulla eligendi?
+                        Verantwortlich für Finanzen und Controlling sowie für die Planung und Steuerung der kaufmännischen Prozesse. Mit einem klaren Blick auf Zahlen und Wirtschaftlichkeit schafft Niklas Otto Transparenz und unterstützt fundierte unternehmerische Entscheidungen.
                     </p>
                 </div>
-                <img src="https://placehold.co/200" alt="" />
+                <img src="https://placehold.co/200" alt="" style="display: none;"/>
             </div>
         </section>
         <section id="contact">
